--- a/XamarinBuild3/XamarinBuild3.UWP/project.json
+++ b/XamarinBuild3/XamarinBuild3.UWP/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Xamarin.Forms": "2.0.0.6482"
+    "Xamarin.Forms": "2.0.0.6482",
+    "XamlingCore_Forms": "2.1.163"
   },
   "frameworks": {
     "uap10.0": {}
