--- a/XamarinBuild3/XamarinBuild3.UWP/project.json
+++ b/XamarinBuild3/XamarinBuild3.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Restup": "1.0.0-beta4",
     "Xamarin.Forms": "2.0.0.6482",
     "XamlingCore_Forms": "2.1.163"
   },
